syntax = "proto3";

package sharehodl.governance.v1;

import "cosmos/base/query/v1beta1/pagination.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos_proto/cosmos.proto";
import "sharehodl/governance/v1/governance.proto";

option go_package = "github.com/sharehodl/sharehodl-blockchain/api/sharehodl/governance/v1";

// Query defines the gRPC querier service.
service Query {
  // Params returns the parameters of the module
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/sharehodl/governance/v1/params";
  }

  // Proposal returns a specific proposal by ID
  rpc Proposal(QueryProposalRequest) returns (QueryProposalResponse) {
    option (google.api.http).get = "/sharehodl/governance/v1/proposals/{proposal_id}";
  }

  // Proposals returns all proposals
  rpc Proposals(QueryProposalsRequest) returns (QueryProposalsResponse) {
    option (google.api.http).get = "/sharehodl/governance/v1/proposals";
  }

  // Vote returns a vote for a specific proposal and voter
  rpc Vote(QueryVoteRequest) returns (QueryVoteResponse) {
    option (google.api.http).get = "/sharehodl/governance/v1/proposals/{proposal_id}/votes/{voter}";
  }

  // Votes returns all votes for a specific proposal
  rpc Votes(QueryVotesRequest) returns (QueryVotesResponse) {
    option (google.api.http).get = "/sharehodl/governance/v1/proposals/{proposal_id}/votes";
  }

  // Deposit returns a deposit for a specific proposal and depositor
  rpc Deposit(QueryDepositRequest) returns (QueryDepositResponse) {
    option (google.api.http).get = "/sharehodl/governance/v1/proposals/{proposal_id}/deposits/{depositor}";
  }

  // Deposits returns all deposits for a specific proposal
  rpc Deposits(QueryDepositsRequest) returns (QueryDepositsResponse) {
    option (google.api.http).get = "/sharehodl/governance/v1/proposals/{proposal_id}/deposits";
  }

  // TallyResult returns the tally result for a specific proposal
  rpc TallyResult(QueryTallyResultRequest) returns (QueryTallyResultResponse) {
    option (google.api.http).get = "/sharehodl/governance/v1/proposals/{proposal_id}/tally";
  }
}

// QueryParamsRequest is request type for the Query/Params RPC method
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method
message QueryParamsResponse {
  Params params = 1 [(gogoproto.nullable) = false];
}

// QueryProposalRequest is request type for the Query/Proposal RPC method
message QueryProposalRequest {
  uint64 proposal_id = 1;
}

// QueryProposalResponse is response type for the Query/Proposal RPC method
message QueryProposalResponse {
  Proposal proposal = 1 [(gogoproto.nullable) = false];
}

// QueryProposalsRequest is request type for the Query/Proposals RPC method
message QueryProposalsRequest {
  ProposalStatus proposal_status = 1;
  string voter = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string depositor = 3 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  cosmos.base.query.v1beta1.PageRequest pagination = 4;
}

// QueryProposalsResponse is response type for the Query/Proposals RPC method
message QueryProposalsResponse {
  repeated Proposal proposals = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryVoteRequest is request type for the Query/Vote RPC method
message QueryVoteRequest {
  uint64 proposal_id = 1;
  string voter = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

// QueryVoteResponse is response type for the Query/Vote RPC method
message QueryVoteResponse {
  Vote vote = 1 [(gogoproto.nullable) = false];
}

// QueryVotesRequest is request type for the Query/Votes RPC method
message QueryVotesRequest {
  uint64 proposal_id = 1;
  cosmos.base.query.v1beta1.PageRequest pagination = 2;
}

// QueryVotesResponse is response type for the Query/Votes RPC method
message QueryVotesResponse {
  repeated Vote votes = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryDepositRequest is request type for the Query/Deposit RPC method
message QueryDepositRequest {
  uint64 proposal_id = 1;
  string depositor = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

// QueryDepositResponse is response type for the Query/Deposit RPC method
message QueryDepositResponse {
  Deposit deposit = 1 [(gogoproto.nullable) = false];
}

// QueryDepositsRequest is request type for the Query/Deposits RPC method
message QueryDepositsRequest {
  uint64 proposal_id = 1;
  cosmos.base.query.v1beta1.PageRequest pagination = 2;
}

// QueryDepositsResponse is response type for the Query/Deposits RPC method
message QueryDepositsResponse {
  repeated Deposit deposits = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryTallyResultRequest is request type for the Query/TallyResult RPC method
message QueryTallyResultRequest {
  uint64 proposal_id = 1;
}

// QueryTallyResultResponse is response type for the Query/TallyResult RPC method
message QueryTallyResultResponse {
  TallyResult tally = 1 [(gogoproto.nullable) = false];
}